--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,3 @@
-.App {
-  text-align: center;
-}
 
 .App-body {
   background-color: #282c34;
@@ -10,22 +7,6 @@
   font-size: calc(10px + 2vmin);
   color: white;
   height:100vh;
-}
-
-.navbar {
-  display: flex;
-  height: 100px;
-  flex-grow: 0;
-  justify-content: space-around;
-  width: 100%;
-}
-
-.navlink {
-  pointer-events: all;
-}
-
-.navlink:hover {
-  cursor: pointer;
 }
 
 .App-content {
@@ -41,7 +22,8 @@
   flex-direction: column;
   flex-grow: 1;
   /*border: 1px solid brown;*/
-  width: 200px;
+  width: 350px;
+  padding: 5px;
 }
 
 .chatArea {
